// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarRadio should match a snapshot - Number 1`] = `
<DocumentFragment>
  <input
    aria-label="Input type number"
    class="mocked-styled-38 el-input"
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`ToolbarRadio should match a snapshot - Radio 1`] = `
<DocumentFragment>
  <input
    aria-label="Input type number"
    class="mocked-styled-38 el-input"
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`ToolbarRadio should match a snapshot - Select 1`] = `
<DocumentFragment>
  <input
    aria-label="Input type number"
    class="mocked-styled-38 el-input"
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`ToolbarRadio should match a snapshot - Slider 1`] = `
<DocumentFragment>
  <input
    aria-label="Input type number"
    class="mocked-styled-38 el-input"
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`ToolbarRadio should match a snapshot - Text 1`] = `
<DocumentFragment>
  <input
    aria-label="Input type text"
    class="mocked-styled-38 el-input"
    type="text"
    value=""
  />
</DocumentFragment>
`;
